# Triangulo-Catch22

./: CMakeLists.txt  README.md
.github/workflows/: autograding.yml  classroom.yml
src/: triangulo.cpp
tests/: test_triangulo.cpp
